do not use new Integer(...)